Push demo files T27* to class

--- a/lec/T27-variance-decomposition.ipynb
+++ b/lec/T27-variance-decomposition.ipynb
@@ -196,11 +196,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dicussion question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Please run all cells before this cell, including the import cell at the top of the notebook.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Part 1\n",
+    "# we want sqrt(1 - r^2) * sd y\n",
+    "r = 0.6\n",
+    "sd_y = 15\n",
+    "sd_resid = np.sqrt(1 - 0.6 ** 2) * 15\n",
+    "sd_resid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 2\n",
+    "# Hint: Chebychev's Inequality\n",
+    "# 75% = 1 - (1/2^2) of the data is within 2 SDs of the mean\n",
+    "12.0 * 2"
+   ]
   }
  ],
  "metadata": {
